--- a/Alternatives.html
+++ b/Alternatives.html
@@ -17,12 +17,12 @@
     </section>
     <section >
 
-        <h3 class="stitle tc topHead">Alternatives
+        <h3 class="toptitle tc ">Alternatives
 </h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <!-- <h3 class="stitle mt0 mb20">Technical and Derivatives</h3> -->
             
 
