--- a/Automate_Strategies.html
+++ b/Automate_Strategies.html
@@ -15,7 +15,7 @@
 </section>
     <section >
 
-        <h3 class="stitle tc topHead">Automate Strategies</h3>
+        <h3 class="toptitle tc topHead">Automate Strategies</h3>
         <div class="container-fluid cc ">
             <div class="banner"></div>
            </div> 
