--- a/Bike_Insurance.html
+++ b/Bike_Insurance.html
@@ -16,36 +16,28 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Bike Insurance</h3><br>
+        <h3 class="toptitle tc ud1">Bike Insurance</h3>
         <div class="container-fluid cc ">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
             </div>
         </div>
-        <div class="container allul areain">
+        </section>
+        <section class="">
+        <div class="container areain">
             <h3 class="stitle mt0 mb30">5 Reasons to Buy Bike Insurance</h3>
-            <ul>
-                <li>1&nbsp;</li>
-                <li>Bike insurance gives you financial protection from accidents, theft, damages and natural calamities.</li>
+            <ul class="noul2">
+                <li>Bike insurance : <span> gives you financial protection from accidents, theft, damages and natural calamities.</span></li>
+                <li>Cashless payment system : <span> You can repair your vehicle from the network garages of your insurer and avail cashless facility.</span></li>
+                <li>Covers third party : <span> damages involving your vehicle.</span></li>
+                <li>Compensates vehicle : <span> repairing costs due to damage from accident.</span></li>
+                <li>2-Wheeler : <span> insurance is compulsory by law.</span></li>
+
+
             </ul>
-            <ul>
-                <li>2</li>
-                <li>Cashless payment system. You can repair your vehicle from the network garages of your insurer and avail cashless facility.</li>
-            </ul>
-            <ul>
-                <li>3</li>
-                <li>Covers third party damages involving your vehicle.</li>
-            </ul>
-            <ul>
-                <li>4</li>
-                <li>Compensates vehicle repairing costs due to damage from accident.</li>
-            </ul>
-            <ul>
-                <li>5</li>
-                <li>2-Wheeler insurance is compulsory by law.</li>
-            </ul>
+   
            
         </div>
     </section>
