--- a/Conviction_Capital.html
+++ b/Conviction_Capital.html
@@ -16,23 +16,22 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Conviction Capital</h3><br><br>
+        <h3 class="toptitle tc ud1">Conviction Capital</h3>
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
             </div>
         </div>
-        <div class="container allul areain allfw400">
+        <div class="container  areain allfw400">
             <h3 class="stitle mt0 mb20">what is conviction capital advisory services ?</h3>
             <p class="tpara1">
                 Conviction Capital Advisory Services which combines 360° Advisory services with the best of our research i.e
             </p>
             <!-- <h3 class="stitle mt30 mb10">Strangths</h3> -->
-            <div class="noul1">
-                <ul>
-                    <li>1</li>
+            <div class="">
+                <ul class="noul2">
                     <li>Fundamental & Sectoral allocation advisory </li>
                     <li>Quant Advisory</li>
                     <li>Macro & Asset Allocation Advisory</li>
@@ -45,11 +44,12 @@
 
                 </ul>
             </div>
-            
+            </div>
+            </section>
+            <section class="bggray">
+                <div class="container areain">
             <h3 class="stitle mt30 mb10">How Is The Portfolio Created ?</h3>
-            <div class="noul1">
-                <ul>
-                    <li>1</li>
+                <ul class="noul2">
                     <li>Macro-Economic cycle is understood by using Macrometer to establish Asset Allocation Strategy</li>
                     <li>Understand the market cycle & sentiment</li>
                     <li>Sectoral focus by identifying sectors and themes with growth and earnings visibility to define sector weightage and allocation</li>
@@ -59,11 +59,12 @@
                     <li>Monitoring, Risk & Rebalancing using Conquest framework</li>
                 </ul>
             </div>
-
+</section>
+<section class="">
+    <div class="container areain">
             <h3 class="stitle mt30 mb10">discipline & balance</h3>
-            <div class="noul1">
-                <ul>
-                    <li>1</li>
+            <div class="">
+                <ul class="noul2">
                     <li>Use of CONQUEST Framework, Technical and proprietary Quant Indicators for market timing, asset allocation, sector allocation and rebalancing. </li>
                     <li>Using Volume, Liquidity Filters and Technical stop losses.</li>
                     <li>Use of Derivative Instruments to hedge risk and generate alpha.</li>
@@ -72,11 +73,13 @@
                     <li>Minimum Allocation to any one idea => 2.5 %</li>
                 </ul>
             </div>
-
+</div>
+</section>
+<section class="bggray">
+    <div class="container areain">
             <h3 class="stitle mt30 mb10">why should i opt for ccas ?</h3>
-            <div class="noul1">
-                <ul>
-                    <li>1</li>
+            <div class="">
+                <ul class="noul2">
                     <li>Backed by PL - One of the oldest and leading financial providers of India with 75 years of legacy & trust. </li>
                     <li>Depth & Breadth of Research Team- Fundamental, Technical, Derivatives, Alpha, Quant, Macro & Strategy, On-Ground & Investment Strategy Research Desks.</li>
                     <li>Proprietary Research models: Proprietary Quant Indicators & Algorithms that support investment decision process. Sentimeter, Sectometer, Macrometer, Red Flag Grid, Scorecard, Decade Decoded, Value Decoder are used.</li>
@@ -84,11 +87,13 @@
                     <li>Dedicated Relationship Managers across India and more than 700 locations.</li>
                 </ul>
             </div>
-
+</div>
+</section>
+<section class="">
+    <div class="container areain">
             <h3 class="stitle mt30 mb10">subscribing in 3 easy steps !</h3>
-            <div class="noul1">
-                <ul>
-                    <li>1</li>
+            <div class="">
+                <ul class="noul2">
                     <li>Open a Trading cum DP Account & Sign up with conviction capital Advisory Services </li>
                     <li>Fund your account with a cash margin of Rs 25 lakh or in multiples of Rs 500,000
                         <ul class="indisc">
