--- a/Equity_Trading.html
+++ b/Equity_Trading.html
@@ -14,9 +14,9 @@
         <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
     </div>
 </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Equity Trading and Investment</h3><br><br> 
+        <h3 class="toptitle tc ud1">Equity Trading and Investment</h3>
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
@@ -40,27 +40,22 @@
                     <li>Multiple trading channels: branches, franchisees, Relationship Managers, tele-trade and online</li>
                 </ul>
             </div>
-            <h3 class="stitle mt30 mb10">Strengths and advantages of Equity Trading</h3>
-            <ul>
-                <li>1&nbsp;</li>
-                <li>Advice on risk-return patterns</li>
-            </ul>
-            <ul>
-                <li>2</li>
-                <li>Timely information on market opportunities</li>
-            </ul>
-            <ul>
-                <li>3</li>
-                <li>Recommendations for specific needs</li>
-            </ul>
-            <ul>
-                <li>4</li>
-                <li>Strategic inputs to maximise returns</li>
-            </ul>
-            <ul>
-                <li>5</li>
-                <li>Centralised back office for easy 24/7 access to account information</li>
-            </ul>
+            </div>
+            </section>
+            <section class="bggray">
+                <div class="container areain">
+                    <h3 class="stitle mt30 mb10">Strengths and advantages of Equity Trading</h3>
+                    <ul class="noul2">
+                        <li>Advice on risk-return patterns</li>
+                        <li>Timely information on market opportunities</li>
+                        <li>Recommendations for specific needs</li>
+                        <li>Strategic inputs to maximise returns</li>
+                        <li>Centralised back office for easy 24/7 access to account information</li>
+                    </ul>
+                </div>
+            </section>
+            <section>
+                <div class="container areain">
             <h3 class="stitle mt30 mb10">Research Desk</h3>
             <p class="tpara1">
                 We understand the importance of identifying equity investment opportunities at the appropriate time. Our Research Desk is manned by an experienced team supported by state-of-the-art infrastructure. For more on our research capabilities,
@@ -68,32 +63,30 @@
             <a href="" class="ibtn1">Click Here</a>
             <br><br>
             <div class="noul1 mt30 ">
-                <ul>
-                    <li>1</li>
-                    <li>Seminars and events </li>
-                    <div>
-                        <p class="tpara1 mt10">
-                            We engage all current and prospective customers through value-based and innovative investor meets. Our equity trading experts share market knowledge to empower our audience to take informed decisions. For a customised, closed-group seminar,
-                           </p>
-                    </div>
+                <ul class="noul2">
+                    <li>Seminars and events : <span>
+                        We engage all current and prospective customers through value-based and innovative investor meets. Our equity trading experts share market knowledge to empower our audience to take informed decisions. For a customised, closed-group seminar,
+                    </span></li>
+                    <li>Compliance : <span>
+                        We strictly adhere to compliance directives. This has earned us the reputation of a law-abiding, technical-savvy and conservative equity broker, and gained us customer goodwill since our inception in 1944.
+                    </span> </li>
                 </ul>
-                <ul>
-                    <li>1</li>
-                    <li>Compliance </li>
-                    <div>
-                        <p class="tpara1 mt10">
-                            We strictly adhere to compliance directives. This has earned us the reputation of a law-abiding, technical-savvy and conservative equity broker, and gained us customer goodwill since our inception in 1944.
-                           </p>
-                    </div>
-                </ul> <br>
+ <br>
             <a href="" class="ibtn1">Contact Us Now</a>
 
                 </div>
+            </div>
+        </section>
+        <section class="bggray">
+            <div class="container areain">
                 <h3 class="stitle mt40">Secure and personalised Equity Investment</h3>
                 <p class="tpara1">
                     We deliver a completely secure and personalised experience to each of our clients. Every client receives an official email ID. The user ID and password are sent along with the Welcome Kit. Our smart account provides clients with secure access to information.
                 </p>
-                <br>
+                </div>
+        </section>
+        <section class="">
+            <div class="container areain">
                 <p class="tpara1">
                     For more information on our Equity Trading services, contact :
                 </p>
