--- a/Events.html
+++ b/Events.html
@@ -8,19 +8,20 @@
 
  <title>EVENTS</title>
     </head>
-<body><section>
+<body>
+  <section>
     <div class="backbtn container">
         <a href="index.html" class="backlink "><i class="icon-arrow-right"></i> Back to home </a>
     </div>
 </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Events</h3><br><br> 
+        <h3 class="toptitle tc ud1">Events</h3>
         <div class="container-fluid cc">
-            <div class="banner">banner here</div>
+            <div class="banner"></div>
            </div>
-        <div class="container">
-          <div class="row cc" style="margin: 80px 0 20px 0;">
+        <div class="container areain">
+          <div class="row cc" style="margin: 0px 0 20px 0;">
               <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 col-12">
 
                 <div class="tab-content pdfbox">
