--- a/F_and_o.html
+++ b/F_and_o.html
@@ -16,72 +16,51 @@
             <a href="imhere.html"  class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Futures & Options Trading</h3><br><br> 
+        <h3 class="toptitle tc ud1">Futures & Options Trading</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
 
-        <div class="container allul areain">
+        <div class="container  areain">
 
             <p class="tpara1">
                 Derivatives in Indian futures and options trading financial markets have come a long way from being constantly avoided to becoming an essential part of one's portfolio. They offer a host of money making opportunities that help in minimizing risk in futures and options trading.
             </p>
-
-            <h3 class="stitle mt30 mb10">Advantages Of Futures And Options Trading</h3>
-            <ul>
-                <li>1</li>
-                <li>Excellent tools to hedge risk</li>
-            </ul>
-            <ul>
-                <li>2</li>
-                <li>Minimize exposure to riskier assets </li>
-            </ul>
-            <ul>
-                <li>3</li>
-                <li>Emanation of Arbitrage opportunities</li>
-            </ul>
-            <ul>
-                <li>4</li>
-                <li>Effective discovery of price of an asset</li>
-            </ul>
-            <ul>
-                <li>5</li>
-                <li>Multiple pay off scenarios can be created </li>
-            </ul>
-            <ul>
-                <li>6</li>
-                <li>Advantage can be taken of even a non-directional market</li>
-            </ul>
-            <ul>
-                <li>7</li>
-                <li>Futures can be short sold for more than one trading session</li>
-            </ul>
-            <ul>
-                <li>8</li>
-                <li>Improve market efficiency</li>
-            </ul>
-            <ul>
-                <li>9</li>
-                <li>Lower transaction costs as compared to equity</li>
-            </ul>
+</div>
+</section>
+<section class="bggray">
+    <div class="container areain">
+        <h3 class="stitle mt30 mb10">Advantages Of Futures And Options Trading</h3>
+        <ul class="noul2">
+            <li>Excellent tools to hedge risk</li>
+            <li>Minimize exposure to riskier assets </li>
+            <li>Emanation of arbitrage opportunities</li>
+            <li>Effective discovery of price of an asset</li>
+            <li>Multiple pay off scenarios can be created </li>
+            <li>Advantage can be taken of even a non-directional market</li>
+            <li>Futures can be short sold for more than one trading session</li>
+            <li>Improve market efficiency</li>
+            <li>Lower transaction costs as compared to equity</li>
+        </ul>
+    </div>
+</section>
+<section class="">
+    <div class="container areain">
             <h3 class="stitle mb10 mt40">PL Derivatives Research –
                 F & O Trading</h3>
-                <div class="noul1">
-                    <ul>
-                        <li></li>
-                        <li>Process driven, clear cut with incisive coverage of stocks in the derivative segment</li>
-                        <li>Excellent strike rate of calls</li>
-                        <li>Futures and options trading strategies both for Individual stocks and Index options based on underlying Derivative Indicators</li>
-                        <li>Seamless integration between fundamentals and derivatives to eke out special situation Arbitrage strategies. E.g.: Buybacks, rights issue, special dividends, etc</li>
-                        <li>6 daily reports that cover the length and breadth of daily futures and options happenings</li>
+                    <ul class="noul2">
+                        <li>Process driven :<span> clear cut with incisive coverage of stocks in the derivative segment</span></li>
+                        <li>Excellent :<span> strike rate of calls</span></li>
+                        <li>Futures and options trading :<span> strategies both for Individual stocks and Index options based on underlying Derivative Indicators</span></li>
+                        <li>Seamless integration between fundamentals and derivatives :<span> to eke out special situation arbitrage strategies. E.g.: Buybacks, rights issue, special dividends, etc</span></li>
+                        <li>6 daily reports :<span> that cover the length and breadth of daily futures and options happenings</span></li>
                         <li>Research backed by strong technical experts and
-                            Futures Trading Brokers</li>
-                            <li>Real time, intra-day trading calls</li>
-                            <li>Initiation of same sector, low beta pair trading</li>
+                            Futures Trading Brokers</span></li>
+                            <li>Real time, intra-day trading calls</span></li>
+                            <li>Initiation of same sector, low beta pair trading</span></li>
                     </ul>
-                </div>
                 <br><br>
                 <p class="tpara1">
                     For more information on PL's F & O Trading services, contact :
