--- a/Fixed_Income_Solution.html
+++ b/Fixed_Income_Solution.html
@@ -16,34 +16,22 @@
             <a href="imhere.html"  class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Fixed Income Solution</h3><br><br> 
+        <h3 class="toptitle tc ud1">Fixed Income Solution</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <p class="tpara1">
                 We analyse the entire spectrum of fixed income products and present those opportunities that offer the best returns without compromising on safety.
             </p>
-            <div class="noul1">
-            <ul>
-                <li>&nbsp;1</li>
+            <ul class="noul2">
                 <li>Corporate and Institutional <span> FDs Backed by a good credit rating, such FDs offer a favourable risk-reward for those who seek additional returns over traditional fixed-income products </span></li>
-            </ul>
-            <ul>
-                <li>2</li>
                 <li>Non-convertible Debentures (NCDs) <span> NCDs are bonds issued by a company for a specified tenure, with a promise to pay a fixed interest to the investor. Listed on the exchange and tradeable, these are only available in the demat mode. NCDs offer better returns, reasonable liquidity and are more tax-efficient with the cumulative option.</span> </li>
-            </ul>
-            <ul>
-                <li>3</li>
                 <li>Capital Gains and Tax-Free Bonds <span> Protect your wealth with the highest level of safety through sovereign bonds. Earn steady returns while your capital remains protected. 54EC Bonds, or Capital Gains Bonds, are among the best options to save long-term Capital Gains Tax, offering a tax exemption on these gains. You can also opt for Sovereign Gold Bonds and earn an assured interest, while benefiting from the appreciation in the price of gold, as it acts as a hedge against inflation. </span></li>
-            </ul>
-            <ul>
-                <li>4</li>
                 <li>Government Bonds Investors <span> can now participate in the Government of India’s Dated Security and Treasury auctions. For specific treasury requirements, we work closely with leading industry partners to offer you customised portfolios or bonds from the markets.</span> </li>
             </ul>
-       </div>
 
         </div>
     </section>
