--- a/Health_Insurance.html
+++ b/Health_Insurance.html
@@ -16,34 +16,21 @@
             <a href="imhere.html"  class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Health Insurance</h3><br><br><br>
+        <h3 class="toptitle tc ">Health Insurance</h3>
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
             </div>
         </div>
-        <div class="container allul areain">
-            <h3 class="stitle mt0 mb20">5 Reasons to Buy Health Insurance</h3>
-            <ul>
-                <li>1&nbsp;</li>
-                <li>High cost of medical treatment can finish your lifelong savings. Protect yourself and your loved ones from highly expensive medical uncertainty.</li>
-            </ul>
-            <ul>
-                <li>2</li>
+        <div class="container  areain">
+            <h3 class="stitle ">5 Reasons to Buy Health Insurance</h3>
+            <ul class="noul2">
+                <li>High cost of medical treatment can finish your lifelong savings : <span> Protect yourself and your loved ones from highly expensive medical uncertainty.</span></li>
                 <li>Cashless Hospitalization at network hospitals.</li>
-            </ul>
-            <ul>
-                <li>3</li>
                 <li>Hassle-free claim settlement procedure.</li>
-            </ul>
-            <ul>
-                <li>4</li>
                 <li>Maximum cover at low cost. </li>
-            </ul>
-            <ul>
-                <li>5</li>
                 <li>Tax savings under Section 80D of the Income Tax Act.</li>
             </ul>
            
