--- a/Home_Loan.html
+++ b/Home_Loan.html
@@ -16,13 +16,13 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">HDFC Home Loan</h3><br><br><br>
+        <h3 class="toptitle tc ud1">HDFC Home Loan</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <p class="tpara1">
                 The house of your dreams can now be yours with an HDFC Home Loan. Buying a house is an important milestone in your life, and we are here to help you along every step of the way.
             </p>
@@ -30,40 +30,31 @@
                 With more than thirty years’ experience as a housing finance provider, HDFC Home Loans can give you the perfect product to fulfil your need, along with affordable EMIs. Our suite of Housing Finance products includes Home Loans, Home Improvement/Renovation Loans and Home Extension Loans.
             </p>
             <h3 class="stitle mt40 mb20">Why Choose This Product?</h3>
-            <ul>
-                <li>1</li>
+            <ul class="noul2">
                 <li>Flexible repayment options</li>
-            </ul>
-            <ul>
-                <li>2</li>
                 <li>Automated Repayment of Home Loan EMIs </li>
-            </ul>
-            <ul>
-                <li>3</li>
                 <li>In-house scrutiny of property documents</li>
             </ul>
-            <h3 class="stitle mt40 mb20">Get The HDFC Advantage</h3>
+            </div>
+            </section>
+            <section class="bggray">
+                <div class="container areain">
+                    <h3 class="stitle mt40 mb20">Get The HDFC Advantage</h3>
 
-            <ul>
-                <li>1</li>
-                <li>Over 33 years of lending experience</li>
-            </ul>
-            <ul>
-                <li>2</li>
-                <li>Widest range of Home Loan Products </li>
-            </ul>
-            <ul>
-                <li>3</li>
-                <li>Flexible loan repayment options </li>
-            </ul>
-            <ul>
-                <li>4</li>
-                <li>Free & safe document storage </li>
-            </ul><br>
+                    <ul class="noul2">
+                        <li>Over 33 years of lending experience</li>
+                        <li>Widest range of Home Loan Products </li>
+                        <li>Flexible loan repayment options </li>
+                        <li>Free & safe document storage </li>
+                    </ul>         
+                </div>
+            </section>
+            <section class="">
+                <div class="container areain">
+
             <p class="tpara1">
                 *PL is now official distributor of HDFC Home Loans. Conditions apply. All Home Loans from HDFC Ltd. Credit at sole discretion of HDFC Ltd.
             </p>
-            <br>
             <p class="tpara1">
                 For more information on PL’s Home loan services, contact :
             </p>
