--- a/IPO.html
+++ b/IPO.html
@@ -16,18 +16,43 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">IPO</h3><br><br><br>
+        <h3 class="toptitle tc ud1">IPO</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
         <div class="container allul areain">
-            <!-- <h3 class="stitle mt0 mb20">Technical and Derivatives</h3> -->
-            
-
-        </div>
-    </section>
+            <h3 class="stitle mt0 mb20">Introduction to IPO :</h3>
+            <p class="tpara1">
+                An Initial Public Offering (IPO) is an opportunity for a company as well as investors. The company raises capital by selling its shares, becoming more regulated and transparent. Investors benefit by availing an opportunity to invest at an early stage.
+            </p>
+            </div>
+            </section>
+            <section class="bggray">
+                <div class="container areain">
+                    <h3 class="stitle mt0 mb20">Why should you invest in IPOs :</h3>
+                    <ul class="noul2">
+                        <li> By investing at an early stage <span> you get the opportunity to avail stakes in a promising company. Stakes that would later reap rich dividends</span></li>
+                        <li>IPO investments are also good for long term investors <span> By investing in an IPO, you also align with the company’s long term vision for success and growth</span></li>
+                        <li>IPOs are transparent in terms of pricing <span> The conditions for entry are the same, regardless of whether you’re an institutional investor or retail investor</span></li>
+                    </ul>
+                </div>
+            </section>
+            <section class="">
+                <div class="container areain">
+                    <h3 class="stitle mt0 mb20">Things to keep in mind before investing in IPOs :</h3>
+                    <ul class="noul2">
+                        <li> Determine your essential investment criteria. <span> This includes the money that you can invest, risk appetite and time horizon for investment</span></li>
+                        <li>Study offerings carefully before investing <span> Make sure you research the company’s fundamentals, valuation and historic performance before investing</span></li>
+                    </ul>
+                    <h3 class="stitle mt0 mb20">How to invest in IPOs :</h3>
+                    <ul class="noul2">
+                        <li> Get started <span> by opening a demat account</span></li>
+                        <li>Open your demat trading account with Prabhudas Lilladher Pvt. Ltd. <span>to invest in IPOs, equities, ETFs and much more</span></li>
+                    </ul>
+                </div>
+                    </section>
     <section class="areain" style="background-color: var(--dblue);">
         <div class="container">
             <h3 class="stitle white tc ud1">Open An Account</h3><br><br>
