--- a/Institutional-Equities.html
+++ b/Institutional-Equities.html
@@ -16,7 +16,7 @@
 </section>
     <section >
 
-        <h3 class="stitle topHead tc ud1">Institutional Equities</h3>
+        <h3 class="toptitle  tc ">Institutional Equities</h3>
         <div class="container-fluid cc">
             <div class="banner">banner here</div>
            </div>
@@ -36,7 +36,7 @@
         </div>
 <section class=" bggray">
     <div class="container areain">
-    <h3 class="stitle  ">Institutional Trading</h3>
+    <h3 class="stitle ">Institutional Trading</h3>
     <ul class="noul2">
         <li>Equity, Cash and Derivatives Institutional Trading</li>
         <li>Direct Market Access for faster trades</li>
