--- a/LAS.html
+++ b/LAS.html
@@ -16,13 +16,13 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Loan Against Shares</h3><br><br><br>
+        <h3 class="toptitle tc ">Loan Against Shares</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <p class="tpara1">
                 Meet immediate money requirements without selling your long term investments by getting instant loans
                 against them. Doing this, not only meets your urgent needs but also lets you continue to earn dividends.
@@ -34,8 +34,7 @@
             </p>
             <h3 class="stitle mt40 mb20">Benefits</h3>
             <div class="noul1">
-                <ul>
-                    <li></li>
+                <ul class="noul2">
                     <li>Avail funding for Shares, Securities, IPOs and Mutual Funds</li>
                     <li>Instant Liquidity without selling long-term investments</li>
                     <li>Increased investment capacity/diversification</li>
@@ -46,29 +45,20 @@
                         charges</li>
                 </ul>
             </div>
-            <h3 class="stitle mt40 mb20 tc">Features & Advantages Of Promoter funding</h3>
+            <h3 class="stitle mt40 mb20 ">Features & Advantages Of Promoter funding</h3>
+            </div>
+    </section>
+    <section class="bggray">
+        <div class="container areain">
             <h3 class="stitle mt40 mb20">Advantages</h3>
-                <ul>
-                    <li>1</li>
-                    <li>Increased promoter's holding in the business & by using existing stake.</li>
-                    </ul>
-                    <ul>
-                    <li>2</li>
-                    <li>Addressing liquidity requirements for expansion and diversification of business</li>
-                    </ul>
-                    <ul>
-                    <li>3</li>
-                    <li>Quick and easy procurement</li>
-                    </ul>
-                    <ul>
-                    <li>4</li>
-                    <li>Interest rates are levied on daily reducing balance method</li>
-                    </ul>
-                    <ul>
-                    <li>5</li>
-                    <li>Customized offerings to suits business requirements</li>
-                </ul>
-                
+            <ul class="noul2">
+                <li>Increased promoter's holding in the business & by using existing stake.</li>
+                <li>Addressing liquidity requirements for expansion and diversification of business</li>
+                <li>Quick and easy procurement</li>
+                <li>Interest rates are levied on daily reducing balance method</li>
+                <li>Customized offerings to suits business requirements</li>
+            </ul>
+            
         </div>
     </section>
     <section class="areain" style="background-color: var(--dblue);">
