--- a/New_Fund_Offer.html
+++ b/New_Fund_Offer.html
@@ -14,19 +14,19 @@
         <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
     </div>
 </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">New Fund Offer</h3><br><br><br>
+        <h3 class="toptitle tc ">New Fund Offer</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
            </div> 
-        <div class="container allul areain">
-            <h3 class="stitle mt0 mb20">New Fund Offer</h3>
+        <div class="container areain">
+            <h3 class="stitle ">New Fund Offer</h3>
             <p class="tpara1">
                 A new fund offer (NFO) is the first subscription offering for any new fund offered by an investment company. A new fund offer occurs when a fund is launched, allowing the firm to raise capital for purchasing securities.
             </p>
             <p class="tpara1">Mutual funds are one of the most common new fund offerings marketed by an investment company. The initial purchasing offer for a new fund varies by the fund’s structuring.A new fund offering is similar to an initial public offering.</p>
-            <h3 class="stitle mt30 mb10 ">Common Fund Offerings</h3>
+            <h3 class="stitle  ">Common Fund Offerings</h3>
             <p class="tpara1">
                 Open-ended and Close-ended Funds Open-ended funds do not have a limit on the number of shares they are issuing whereas Close-ended funds issue a fixed number of shares during their New Fund Offer. Investors can buy both funds through a brokerage firm. The research team over at Prabhudas Lilladher continually scans the market for promising New Fund Offers and makes them available for you. If however there is a New Fund Offer that’s not listed on our website, please write to us at info@plindia.com
             </p>
