--- a/Offer_For_Sale.html
+++ b/Offer_For_Sale.html
@@ -14,13 +14,13 @@
         <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
     </div>
 </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Offer For Sale (OFS)</h3><br><br><br>
+        <h3 class="toptitle tc ud1">Offer For Sale (OFS)</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
            </div> 
-        <div class="container allul areain">
+        <div class="container  areain">
             <h3 class="stitle mt0 mb20">Offer For Sale (OFS)</h3>
             <p class="tpara1">
                 An Offer for Sale is a method where promoters in public companies sell their shares and reduce their holdings in a transparent manner through a bidding platform. The OFS segment was earlier allowed only for the Promoters/Promoters’ Group Entities of listed Companies, to act as ‘Sellers’ to dilute/offload their holding to achieve minimum public shareholding of 25%.
@@ -28,43 +28,24 @@
             <p class="tpara1">
                 Now, however, the segment has been extended to non-promoters of eligible companies holding at least 10% of share capital of the company.
             </p>
-            <h3 class="stitle mt30 mb10 ">Bidding for OFS</h3>
+            <h3 class="stitle  ">Bidding for OFS</h3>
             <p class="tpara1">
                 Offer For Sale Mechanism Is Available To 200 Top Companies In Terms Of Market Capitalization. Retail Investors Can Bid For OFS If The Total Bid Value Is Not Exceeding Rs.2 Lakh
             </p>
-            <h3 class="stitle mt30 mb10">Things to keep in mind for OFS settlement</h3>
-            <div class="noul">
-                <ul>
-                    <li>1</li>
-                    <li>allocation will be made in case order/bid is below floor price </li>
-                </ul>
-            
-                <ul>
-                    <li>1</li>
-                    <li>Minimum of 25% of the shares offered shall be reserved for mutual funds and insurance companies, subject to allocation methodology</li>
-                </ul>
-            
-                <ul>
-                    <li>1</li>
-                    <li>No single bidder other than mutual funds and insurance companies shall be allocated more than 25% of the size of offer for sale</li>
-                </ul>
-                <ul>
-                    <li>1</li>
-                    <li>Settlement shall take place on trade for trade basis. For non-institutional orders/bids and for institutional orders with 100% margin, settlement shall take place on T+1 day. In case of orders/bids of institutional investors with no margin, settlement shall be as per the existing rules for secondary market</li>
-                </ul>
-                <ul>
-                    <li>1</li>
+            </div>
+            </section>
+            <section class="bggray">
+                <div class="container areain">
+            <h3 class="stitle ">Things to keep in mind for OFS settlement</h3>
+                <ul class="noul2">
+                    <li>allocation will be made in case order / bid is below floor price </li>
+                    <li>Minimum of 25% <span> of the shares offered shall be reserved for mutual funds and insurance companies, subject to allocation methodology</span></li>
+                    <li>No single bidder other than mutual funds <span> and insurance companies shall be allocated more than 25% of the size of offer for sale</span></li>
+                    <li>Settlement shall take place on trade for trade basis <span> For non-institutional orders/bids and for institutional orders with 100% margin, settlement shall take place on T+1 day. In case of orders/bids of institutional investors with no margin, settlement shall be as per the existing rules for secondary market</span></li>
                     <li>Client can place OFS order from 9.15 am to 2.45 pm</li>
-                </ul>
-                <ul>
-                    <li>1</li>
                     <li>Modification of orders in OFS is not allowed.</li>
-                </ul>
-                <ul>
-                    <li>1</li>
                     <li>In case OFS order get rejected from the exchange for any reason, bid will not go</li>
                 </ul>
-            </div>
         </div>
     </section>
     <section class="areain" style="background-color: var(--dblue);">
