--- a/PropTradingDesk.html
+++ b/PropTradingDesk.html
@@ -16,44 +16,31 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">PropTradingDesk</h3><br><br><br>
+        <h3 class="toptitle tc ud1">PropTradingDesk</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <h3 class="stitle mt0 mb20">Institutional Trading</h3>
 
            
-                <ul>
-                    <li>1&nbsp;</li>
+                <ul class="noul2">
                     <li>
                         Equity, Cash and Derivatives Institutional Trading
                     </li>
-                    </ul>
-                    <ul>
-                        <li>2</li>
                     <li>
                         Direct Market Access for faster trades
 
                     </li>
-                    </ul>
-                    <ul>
-                        <li>3</li>
                     <li>
                         Proprietary Algorithmic Trading Solutions
                     </li>
-                    </ul>
-                    <ul>
-                        <li>4</li>
                     <li>
                         Highly experienced Derivatives Desk
 
                     </li>
-                    </ul>
-                    <ul>
-                        <li>5</li>
                     <li>
                         World-class Order routing platforms: Bloomberg, Fidessa, Marco Polo, NYFIX, TNS
 
