--- a/Real_Estate.html
+++ b/Real_Estate.html
@@ -14,13 +14,13 @@
         <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
     </div>
 </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Real Estate Investment in India</h3><br><br><br>
+        <h3 class="toptitle tc ud1">Real Estate Investment in India</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
            </div> 
-        <div class="container allul areain">
+        <div class="container  areain">
             <!-- <h3 class="stitle mt30 mb10">Unlisted Shares</h3> -->
             <p class="tpara1">
                 The Real Estate sector is flourishing greatly in India and the real estate investment opportunities in it are just as great. The nation is aiming to go global in this sector and the opportunities are endless. With the aim of capitalizing on these opportunities in the booming sector, Prabhudas Lilladher offers its Real Estate
@@ -30,21 +30,13 @@
             </p>
             <h3 class="stitle mt40">investment advisory services</h3>
             <h3 class="stitle mb10">Strengths</h3>
-            <div class="allul">
-                <ul>
-                    <li>1&nbsp;</li>
+                <ul class="noul2">
                     <li>Good relations with all major real estate developers </li>
-                </ul>
-            
-                <ul>
-                    <li>2</li>
                     <li>A professional team to guide the investor</li>
                 </ul>
-            </div>
             <h3 class="stitle mt30">Advantages</h3>
             <div class="noul1 mt30 ">
-                <ul>
-                    <li>1</li>
+                <ul class="noul2">
                     <li>Dealings with only reputed developers</li>
                     <li>Easy access to all property requirements</li>
                     <li>Best deals from developers</li>
@@ -52,7 +44,8 @@
                     <li>Professional service</li>
                 </ul>
             
-            </div>   <br> 
+            </div>   
+            <br> 
             <p class="tpara1">
                 For more information on PL's Real Estate services, contact :
             </p>
