--- a/Retirement_Plan.html
+++ b/Retirement_Plan.html
@@ -16,30 +16,23 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Retirement Plan</h3><br><br><br>
+        <h3 class="toptitle tc ">Retirement Plan</h3>
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
             </div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <h3 class="stitle mt0 mb20">4 Reasons to Buy Retirement Plan</h3>
-            <ul>
-                <li>1&nbsp;</li>
+            <ul class="noul2">
                 <li>Retire Rich and preserve your lifestyle.</li>
-            </ul>
-            <ul>
-                <li>2</li>
+ 
                 <li>Regular Guaranteed Income for lifetime*.</li>
-            </ul>
-            <ul>
-                <li>3</li>
+          
                 <li>Flexibility to get cashflow benefits when you need them.</li>
-            </ul>
-            <ul>
-                <li>4</li>
+         
                 <li>Save Tax under section 80C and 10 (10D)*.</li>
             </ul>
 
