--- a/Stock_sip.html
+++ b/Stock_sip.html
@@ -16,15 +16,24 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Stock SIP</h3><br><br><br>
+        <h3 class="toptitle tc ud1">Stock SIP</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
-        <div class="container allul areain">
-            <!-- <h3 class="stitle mt0 mb20">Technical and Derivatives</h3> -->
-            
+        <div class="container  areain">
+            <p class="tpara1">
+                Invest in direct equities in a systematic manner via Systematic Investment Plans. We offer plans where you can invest systematically in specified stocks, mutual funds and exchange traded funds. Investors can opt for a fixed amount or a fixed quantity to be invested on a regular basis, say, every month or every quarter.
+            </p>
+            <h3 class="stitle mt0 mb20">You can :</h3>
+
+            <ul class="noul2">
+                <li>Track your Stock SIPs online</li>
+                <li>Modify your Stock SIPs and change the quantity, SIP date or frequency</li>
+                <li>Trade in stocks and ETFs online</li>
+                <li>Pause and restart your Stock SIPs in case of emergencies</li>
+            </ul>
 
         </div>
     </section>
