--- a/alpha_calls.html
+++ b/alpha_calls.html
@@ -19,7 +19,7 @@
     </section>
     <section >
 
-        <h3 class="stitle topHead tc">alpha calls</h3>
+        <h3 class="toptitle topHead tc">alpha calls</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
