--- a/career.html
+++ b/career.html
@@ -31,9 +31,9 @@
         </div>
     </section>
 
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Career</h3><br><br>
+        <h3 class="toptitle tc ">Career</h3>
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
@@ -41,10 +41,9 @@
         </div>
 
 
-        <div class="container">
+        <div class="container areain">
 
 
-            <br><br>
             <ul class="owl-carousel owl-theme about-page-owl  nav" id="owl-carousel-about">
                 <li class="active item"><a data-toggle="tab" href="#life" class="active">Life at PL</a></li>
                 <li class="item"><a data-toggle="tab" href="#co">career opportunities</a></li>
