--- a/currency.html
+++ b/currency.html
@@ -14,9 +14,9 @@
         <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
     </div>
 </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Currency</h3><br><br>
+        <h3 class="toptitle tc ud1">Currency</h3>
         <div class="container-fluid cc">
             <div class="banner">
                 <img src="assets/img/Currencies_Banners.png" alt="" srcset="">
@@ -30,48 +30,33 @@
             </p>
             <p class="tpara1">Currency markets being the largest market in the world was opened by the RBI in year 2008 to Resident Indian Clients/Entities and recently to NRIs and Foreign Institutional Investors (FIIs) to participate in Indian Currency Exchange platform to trade and/or hedge with lower costs and higher leverage in an organized regulated environment as compared to the OTC market.</p>
             <h3 class="stitle tc mt30 mb30">our services</h3>
-            <h3 class="stitle mt30 mb10 ">For Hedgers and Currency based Entities</h3>
-            <ul>
-                <li>1&nbsp;</li>
-                <li>Customized solutions and advice as per specific requirement for hedging in Currencies. </li>
-            </ul>
-            <ul>
-                <li>2</li>
-                <li>Robust Automated Risk Management system with state of the art infrastructure</li>
-            </ul>
-            <ul>
-                <li>3</li>
-                <li>Reports on Market Trends in the short and long term after analyzing local and Global factors impacting prices. </li>
-            </ul>
-            <ul>
-                <li>4</li>
-                <li>Brand and Corporate Parentage </li>
-            </ul>
+            </div>
+            </section>
+            <section class="bggray">
+                <div class="container areain">
+                    <h3 class="stitle mt30 mb10 ">For Hedgers and Currency based Entities</h3>
+                    <ul class="noul2">
+                        <li>Customized solutions and advice as per specific requirement for hedging in Currencies. </li>
+                        <li>Robust Automated Risk Management system with state of the art infrastructure</li>
+                        <li>Reports on Market Trends in the short and long term after analyzing local and Global factors impacting prices. </li>
+                        <li>Brand and Corporate Parentage </li>
+
+                    </ul>
+                </div>
+            </section>
             
+            <section>
+                <div class="container areain">
                 <h3 class="stitle mt30 mb10 ">For Traders and Investors</h3>
-                <ul>
-                    <li>1&nbsp;</li>
-                    <li>Dedicated Relationship managers (RMs) and Call and Trade facility with your branch / sub broker with whom your account is registered </li>
-                </ul>
-                <ul>
-                    <li>2</li>
-                    <li>Online Trading: Free online trading terminal</li>
-                </ul>
-                <ul>
-                    <li>3</li>
-                    <li>24 * 7 online back-office support </li>
-                </ul>
-                <ul>
-                    <li>4</li>
+                <ul class="noul2">
+                    <li>Dedicated Relationship managers (RMs) : <span> and Call and Trade facility with your branch / sub broker with whom your account is registered </span></li>
+                    <li>Online Trading : <span> Free online trading terminal</span></li>
+                    <li>24 * 7 :<span> online back-office support</span> </li>
                     <li>Live Risk Management </li>
-                </ul>
-                <ul>
-                    <li>5</li>
                     <li>National Reach </li>
-                </ul>
-                <ul>
-                    <li>6</li>
                     <li>Professional Management </li>
+
+
                 </ul>
         </div>
     </section>
