--- a/debt_pms.html
+++ b/debt_pms.html
@@ -16,9 +16,9 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Debt PMS</h3><br><br>
+        <h3 class="toptitle tc ud1">Debt PMS</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
