--- a/derivatives.html
+++ b/derivatives.html
@@ -17,7 +17,7 @@
         </div>
     </section>
     <section class="">
-        <h3 class="stitle topHead tc ud1">Technical and Derivatives</h3>
+        <h3 class="toptitle tc">Technical and Derivatives</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
