--- a/ibca.html
+++ b/ibca.html
@@ -14,13 +14,13 @@
         <a href="Bussiness_verticals.html" class="backlink "><i class="icon-arrow-right"></i> Back to business verticals</a>
     </div>
 </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Investment Banking & Corporate Advisory</h3><br><br><br>
+        <h3 class="toptitle tc ud1">Investment Banking & Corporate Advisory</h3>
         <div class="container-fluid cc">
-            <div class="banner">banner here</div>
+            <div class="banner"></div>
            </div>
-        <div class="container allul">
+        <div class="container allul areain">
            <p class="tpara1 mt30">
             Our optimal solutions stem from a deep sectorial understanding and insights to macro and key trends, combined with wide experience. Being part of a large financial services group with strong institutional and retail platforms, our team has access to a broad spectrum of investors.
            </p>
@@ -33,7 +33,7 @@
            </p>
  <br><br>
 <div class="row">
-    <div class="col-xl-6">
+    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
         <div class="txtbox">
            <h3 class="stitle mt30 mb30">Equity Capital Market   </h3>
            <p class="tpara1">
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <div class="col-xl-6">
+    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
         <div class="txtbox">
            <h3 class="stitle mt30 mb30">Corporate Advisory</h3>
            <p class="tpara1">
