--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <section class="areanopadiing1 " style="margin-top: 10px;padding-bottom: 0!important;">
   <div class="">
     <div class="contain">
-      <div id="owl-carousel-1" class="owl-carousel owl-12 owl-theme">
+      <div id="" class="owl-carousel owl-carousel-1 owl-12 owl-theme">
         <div class="item">
          <div class="banner1">
            <a href="http://remap.plindia.com/tradeplus">
@@ -437,7 +437,7 @@ Equties</li>
     </div>
     </div>
   <div class="contain">
-    <div id="owl-carousel-2" class="owl-carousel owl-1 owl-theme">
+    <div id="" class="owl-carousel owl-carousel-2 owl-1 owl-theme">
       <div class="item">
         <div class="dbox">
           <div class="dboximg">
@@ -697,7 +697,7 @@ free. Invest in less than one share.
 
 </div>
   <div class="contain">
-    <div id="owl-carousel-2" class="owl-carousel owl-1 owl-theme">
+    <div id="" class="owl-carousel owl-carousel-2 owl-1 owl-theme">
       <div class="item">
         <div class="dbox">
           <div class="dboximg">
@@ -1347,7 +1347,7 @@ Here’s our legacy in a nutshell</p> <br>
   <div class="container">
   <h1 class="  darkblue text-center fw600" style="margin-bottom: 20px;">Awards</h1>
   <div class="contain1">
-    <div id="owl-carousel-3" class="owl-carousel owl-3 owl-theme">
+    <div id="" class="owl-carousel owl-3 owl-carousel-3 owl-theme">
       <div class="item">
         <img src="assets/img/a1.png" alt="">
       </div>
@@ -1394,11 +1394,11 @@ Here’s our legacy in a nutshell</p> <br>
     <h1 class="  darkblue text-center fw600" style="margin-bottom: 60px;">Media & Blogs</h1>
     <div class="row d-sm-flex justify-content-sm-center">
 
-      <div class="col-xl-7 col-lg- col-md-10 col-sm-10 owl-carousel owl-4 owl-theme" style="padding: 10px 30px;" id="owl-carousel-4" >
+      <div class="col-xl-7 col-lg- col-md-10 col-sm-10 owl-carousel owl-carousel-4 owl-4 owl-theme" style="padding: 10px 30px;" id="" >
 
         <div class="row no-gutters item">
           <div class="col-sm-6 ">
-            <div class="blogcard">
+            <div class="blogcard">        
               <div class="blogimgbox"><img src="assets/img/blog1.jpg" alt=""></div>
               <div class="blogcontent">
                 <p ><span class="blogheading"> TradeTron</span><br>
@@ -1595,7 +1595,7 @@ Here’s our legacy in a nutshell</p> <br>
       </div>
 
 
-      <div class="col-xl-4 col-lg-4 col-md-10 col-sm-10 owl-carousel owl-5 owl-theme " id="owl-carousel-5">
+      <div class="col-xl-4 col-lg-4 col-md-10 col-sm-10 owl-carousel owl-carousel-5 owl-5 owl-theme " id="">
 
         <div class="row item " style="display: flex;justify-content: center;padding: 10px 5px;" >
 
