--- a/nbfc.html
+++ b/nbfc.html
@@ -14,13 +14,13 @@
         <a href="Bussiness_verticals.html" class="backlink "><i class="icon-arrow-right"></i> Back to business verticals</a>
     </div>
 </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">NBFC</h3><br><br><br>
+        <h3 class="toptitle tc ud1">NBFC</h3>
         <div class="container-fluid cc">
-            <div class="banner">banner here</div>
+            <div class="banner"></div>
            </div>
-        <div class="container allul">
+        <div class="container areain">
            <p class="tpara1 mt30">
            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem ea facere possimus. Dolorum laborum tempora vero sed pariatur deserunt animi error, molestias qui quod aliquid enim fugit similique voluptas quam?
            </p>
