--- a/portfolio_management.html
+++ b/portfolio_management.html
@@ -18,18 +18,30 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">portfolio management
+        <h3 class="toptitle tc ud1">portfolio management
 
-</h3><br><br><br>
+</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
-        <div class="container allul areain">
-            <!-- <h3 class="stitle mt0 mb20">Technical and Derivatives</h3> -->
-            
-
+        <div class="container  areain">
+            <h3 class="stitle ">What is Portfolio Management :</h3>
+            <p class="tpara1">
+                A tailor made investment management service catering to high networth individuals; PL’s PMS offers long term growth solutions based on your specific requirements.
+            </p>
+            <h3 class="stitle ">With PL’s PMS, you get :</h3>
+            <ul class="noul2">
+                <li>Bottom-up approach <span> focusing on micro research & evaluating it in prevailing global & domestic macro environment</span></li>
+                <li>Identifying the best companies  to invest irrespective of the sector</li>
+                <li>Having reasonably diversified portfolios without being over-diversified</li>
+            </ul>
+            <h3 class="stitle "> you get :</h3>
+            <ul class="noul2">
+                <li>Convenience :<span> No more hassles with reporting and monitoring. We provide you periodic reports on your portfolio’s performance</span></li>
+                <li>Personalized approach :<span> You get access to our professional team of fund managers via direct meetings, conference calls, webinars etc</span></li>
+                </ul>
         </div>
     </section>
     <section class="areain" style="background-color: var(--dblue);">
