--- a/AIF.html
+++ b/AIF.html
@@ -14,7 +14,7 @@
 </section>
     <section >
 <br>
-        <h3 class="stitle tc ud1">Alternative Investment Funds</h3><br><br>
+        <h3 class="toptitle tc ud1">Alternative Investment Funds</h3>
         <div class="container-fluid cc">
             <div class="banner">
             </div>
