--- a/Business_Continuity.html
+++ b/Business_Continuity.html
@@ -16,9 +16,9 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Business Continuity</h3><br>
+        <h3 class="toptitle tc ">Business Continuity</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
