--- a/Cancer_and_Cardiac_Care.html
+++ b/Cancer_and_Cardiac_Care.html
@@ -16,36 +16,28 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Cancer and Cardiac Care</h3><br><br><br>
+        <h3 class="toptitle tc ">Cancer and Cardiac Care</h3>
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
             </div>
         </div>
-        <div class="container allul areain">
-            <h3 class="stitle mt0 mb20">4 Reasons to Buy Cancer and Cardiac Plan</h3>
-            <ul>
-                <li>1&nbsp;</li>
+        </section>
+        <section>
+        <div class="container  areain">
+            <h3 class="stitle ">4 Reasons to Buy Cancer and Cardiac Plan</h3>
+            <ul class="noul2">
                 <li>Cashless claims at a wide network of hospitals.</li>
-            </ul>
-            <ul>
-                <li>2</li>
                 <li>Includes hospital room rents, hospital expenses and doctor visit charges.</li>
-            </ul>
-            <ul>
-                <li>3</li>
                 <li>Covers your Pre and post hospitalization expenses.</li>
-            </ul>
-            <ul>
-                <li>4</li>
                 <li>Covers day care treatment which do not require 24hrs hospitalization.</li>
-            </ul>
-            <ul>
-                <li>5</li>
                 <li>Tax savings under Section 80D of the Income Tax Act.</li>
+
+
             </ul>
+
            
         </div>
     </section>
