--- a/Home_Insurance.html
+++ b/Home_Insurance.html
@@ -16,31 +16,21 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Home Insurance</h3><br><br><br>
+        <h3 class="toptitle tc ud1">Home Insurance</h3>
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
             </div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <h3 class="stitle mt0 mb20">4 Reasons to Buy Home Insurance</h3>
-            <ul>
-                <li>1&nbsp;</li>
-                <li>It takes years to build your dream house, so protect it from natural disasters like Fire, Earthquake, Cyclone and Flood.</li>
-            </ul>
-            <ul>
-                <li>2</li>
-                <li>Protect your dream home from man-made risk like Burglary, Riots, Theft and Terrorism.</li>
-            </ul>
-            <ul>
-                <li>3</li>
-                <li>Cover your valuables items like furniture, artifacts, electronic appliances and more.</li>
-            </ul>
-            <ul>
-                <li>4</li>
-                <li>You don’t need to renew home insurance policy every year as you can buy a long term cover like 5 years or 10 years.</li>
+            <ul class="noul2">
+                <li>It takes years <span> to build your dream house, so protect it from natural disasters like Fire, Earthquake, Cyclone and Flood.</span></li>
+                <li>Protect your dream home <span> from man-made risk like Burglary, Riots, Theft and Terrorism.</span></li>
+                <li>Cover your valuables items like <span> furniture, artifacts, electronic appliances and more.</span></li>
+                <li>You don’t need to renew home <span> insurance policy every year as you can buy a long term cover like 5 years or 10 years.</span></li>
             </ul>
            
         </div>
