--- a/Investment_Plan.html
+++ b/Investment_Plan.html
@@ -16,29 +16,19 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Investment Plan</h3><br><br><br>
+        <h3 class="toptitle tc ud1">Investment Plan</h3>
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
             </div>
         </div>
-        <div class="cc">
-            <a href="" class="ibtn">Read more on our blog site</a>
-        </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <h3 class="stitle mt30 mb10">3 Reasons to Buy Investment Plan</h3>
-            <ul>
-                <li>1</li>
+            <ul class="noul2">
                 <li>Lock higher returns and beat the falling Fixed Deposit interest.</li>
-            </ul>
-            <ul>
-                <li>2</li>
                 <li>Best of both, Life cover with great returns on your investment.</li>
-            </ul>
-            <ul>
-                <li>3</li>
                 <li>Tax Free Guaranteed Returns* under Section 80 C and 10 (10 D).</li>
             </ul>
        
