--- a/Loan_Against_Property.html
+++ b/Loan_Against_Property.html
@@ -16,25 +16,18 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Loan Against Property</h3><br><br><br>
+        <h3 class="toptitle tc ">Loan Against Property</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
           
-            <h3 class="stitle mt0 mb20">Benefits</h3>
-            <ul>
-                <li>1</li>
+            <h3 class="stitle ">Benefits</h3>
+            <ul class="noul2">
                 <li>Raise funds for personal or business needs through HDFC's Loan against Property!! Program specially designed for Self Employed segment.</li>
-            </ul>
-            <ul>
-                <li>2</li>
                 <li>Residential and commercial properties are accepted as collateral – get attractive rates of interest on both! </li>
-            </ul>
-            <ul>
-                <li>3</li>
                 <li>Easy repayment options offered through loans with longer tenures.</li>
             </ul>
             <br>
