--- a/MF_(debt_gold_and_Hybrd).html
+++ b/MF_(debt_gold_and_Hybrd).html
@@ -18,15 +18,15 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">MF (debt, gold,& Hybrd)
+        <h3 class="toptitle tc ud1">MF (debt, gold,& Hybrd)
 
-</h3><br><br><br>
+</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <!-- <h3 class="stitle mt0 mb20">Technical and Derivatives</h3> -->
             
 
