--- a/Margin_Funding.html
+++ b/Margin_Funding.html
@@ -16,13 +16,12 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Margin Funding</h3><br><br><br>
-        <div class="container-fluid cc">
+        <h3 class="toptitle tc ">Margin Funding</h3>
             <div class="banner"></div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <!-- <h3 class="stitle mt0 mb20">Technical and Derivatives</h3> -->
 
         </div>
