--- a/Multi_Asset_Investing.html
+++ b/Multi_Asset_Investing.html
@@ -16,33 +16,27 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Multi Asset Investing</h3><br><br><br>
+        <h3 class="toptitle tc ">Multi Asset Investing</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <p class="tpara1">
                 Diversify risk, maximize return on investment, don't put all your eggs in one basket. Spread them across multiple assets with Prabhudas Lilladher's Multi Asset Investing solution.
             </p>
             <!-- <h3 class="stitle mt0 mb20">Technical and Derivatives</h3> -->
-            <ul>
-                <li>1&nbsp;</li>
+            <ul class="noul2">
                 <li>Grow :-<span>Wealth Creation through
                     Equity-oriented products and Alternative Assets</span> </li>
-            </ul>
-            <ul>
-                <li>2</li>
+           
                 <li>Preserve :- <span>Income Generation and Preservation through Debt-oriented products and Hybrid Structures</span> </li>
-            </ul>
-            <ul>
-                <li>3</li>
+           
                 <li>Protect :- <span>Wealth Protection and Risk Management through Insurance Planning and Portfolio Hedging strategies</span> </li>
             </ul>
-            <br><br>
-            <div class="cc">
-                <p class="tpara1 tc">
+            <div class="">
+                <p class="tpara1 ">
                     To learn more about multi-asset investing, write to us by filling up this form here.
                 </p>
             </div>
