--- a/Mutualfunds.html
+++ b/Mutualfunds.html
@@ -14,9 +14,9 @@
         <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
     </div>
 </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Mutual Fund Investments & Distribution</h3><br><br><br>
+        <h3 class="toptitle tc ud1">Mutual Fund Investments & Distribution</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
            </div> 
@@ -25,50 +25,22 @@
                <a href="" class="ibtn">PMS NEWSLETTER</a>
                <a href="" class="ibtn">PMS PRESENTATION</a>
            </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <h3 class="stitle mt30 mb10">Features</h3>
-            <ul>
-                <li>1&nbsp;</li>
+            <ul class="noul2">
                 <li>Understanding Financial needs of clients by considering factors like risk appetite investment time horizon, age, tax implications, etc. </li>
-            </ul>
-            <ul>
-                <li>2</li>
                 <li>Team of experienced Relationship Managers to help select the right scheme.</li>
-            </ul>
-            <ul>
-                <li>3</li>
                 <li>Facility to Purchase Mutual units in physical, demat and online mode.</li>
             </ul>
             <h3 class="stitle mt30 mb10">Advantages & Strengths</h3>
-            <div class="noul">
+            <div class="noul2">
                 <ul>
-                    <li>1</li>
                     <li>Unbiased and regular professional advice based on individual needs. </li>
-                </ul>
-            
-                <ul>
-                    <li>1</li>
                     <li>Fund allocation aimed at optimizing returns for individual investment time horizon</li>
-                </ul>
-            
-                <ul>
-                    <li>1</li>
                     <li>Regular and stringent monitoring of portfolios</li>
-                </ul>
-                <ul>
-                    <li>1</li>
                     <li>Empanelled with all leading AMCs</li>
-                </ul>
-                <ul>
-                    <li>1</li>
                     <li>Recommendations backed by thorough research</li>
-                </ul>
-                <ul>
-                    <li>1</li>
                     <li>Monthly updates on Mutual Fund holdings and portfolio reviews</li>
-                </ul>
-                <ul>
-                    <li>1</li>
                     <li>Facility to view portfolio online on our website</li>
                 </ul>
             </div>
