--- a/Portfolio_Hedging_Strategies.html
+++ b/Portfolio_Hedging_Strategies.html
@@ -14,9 +14,9 @@
         <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
     </div>
 </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Portfolio Hedging Strategies</h3><br><br><br>
+        <h3 class="toptitle tc ">Portfolio Hedging Strategies</h3>
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
