--- a/Supermint_Trading_App.html
+++ b/Supermint_Trading_App.html
@@ -16,9 +16,9 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Supermint Trading App</h3><br><br><br>
+        <h3 class="toptitle tc ">Supermint Trading App</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
