--- a/TermPlan.html
+++ b/TermPlan.html
@@ -16,30 +16,21 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Term Plan</h3><br><br><br>
+        <h3 class="toptitle tc ud1">Term Plan</h3>
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
             </div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <h3 class="stitle mt0 mb20">4 Reasons to Buy Term Life Insurance</h3>
-            <ul>
-                <li>1</li>
+            <ul class="noul2">
+                
                 <li>Ideal cover for your family’s financial security in case of earning member’s untimely death. </li>
-            </ul>
-            <ul>
-                <li>2</li>
                 <li>Cover your loans without the risk of losing your asset.</li>
-            </ul>
-            <ul>
-                <li>3</li>
                 <li>Financial protection in case of major illness or accidental disability. </li>
-            </ul>
-            <ul>
-                <li>4</li>
                 <li>Triple Tax benefit U/S 80C, 80D and 10(10D). </li>
             </ul>
            
