--- a/capital_gain_bonds.html
+++ b/capital_gain_bonds.html
@@ -17,10 +17,10 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">capital gain bonds
-</h3><br>
+        <h3 class="toptitle tc ">capital gain bonds
+</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
