--- a/direct_exchange.html
+++ b/direct_exchange.html
@@ -19,12 +19,12 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">direct exchange
+        <h3 class="toptitle tc ud1">direct exchange
 
 
-</h3><br><br> 
+</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
