--- a/gold.html
+++ b/gold.html
@@ -16,15 +16,15 @@
             <a href="imhere.html"  class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section class="">
 
-        <h3 class="stitle tc ud1">Gold</h3><br><br><br>
+        <h3 class="toptitle tc ">Gold</h3>
         <div class="container-fluid cc">
             <div class="banner">
               <img src="assets/img/Gold_Banners.png" alt="" srcset="">
             </div>
         </div>
-        <div class="container allul areain">
+        <div class="container areain">
             <h3 class="stitle  mb20">Interoduction</h3>
             <p class="tpara1">
                 Introducing a smarter way to invest in Gold, online through Sovereign Gold Bonds issued by Government of India and The Reserve Bank of India (RBI)
