--- a/succession_planning.html
+++ b/succession_planning.html
@@ -17,19 +17,19 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <div class="">
 
-        <h3 class="stitle tc ud1">succession planning
-</h3><br><br><br>
+        <h3 class="toptitle tc ">succession planning
+</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
-        <div class="container allul areain">
+        <div class="container  areain">
             <!-- <h3 class="stitle mt0 mb20">Technical and Derivatives</h3> -->
             
 
         </div>
-    </section>
+    </div>
     <section class="areain" style="background-color: var(--dblue);">
         <div class="container">
             <h3 class="stitle white tc ud1">Open An Account</h3><br><br>
